feat: Port to forge stage 3