@@ -1,11 +1,27 @@
 package createvvvfsim;
 import com.simibubi.create.infrastructure.config.AllConfigs;
 import com.simibubi.create.infrastructure.config.CTrains;
+import java.lang.reflect.Method;
 import java.util.Arrays;
+import soundphysics.Instance;
 public class FSmoother{
     private static final CTrains train_config=AllConfigs.server().trains;
-    private static final double max_speed=train_config.trainTopSpeed.getF();
-    private static final double max_acc=train_config.trainAcceleration.getF()*Configs.max_acc_ratio/20.0;
+    private static final double max_speed;
+    private static final double max_acc;
+    static{
+        try{
+            Instance ctrains=Instance.fromObject(train_config);
+            Instance top_speed=ctrains.get("trainTopSpeed");
+            Instance acc=ctrains.get("trainAcceleration");
+            Method get_speed=top_speed.getMethod("getF");
+            Method get_acc=acc.getMethod("getF");
+            max_speed=top_speed.invoke(Float.class,get_speed);
+            max_acc=acc.invoke(Float.class,get_acc)*Configs.max_acc_ratio/20.0;
+        }
+        catch(Exception e){
+            throw new RuntimeException(e);
+        }
+    }
     private static final int speeds_length=Configs.speeds_length;
     private int speeds_index=0;
     private final double[] speed_samples=new double[speeds_length];
@@ -16,9 +32,9 @@ public class FSmoother{
         double[] speeds=Arrays.copyOf(speed_samples,speeds_length);
         Arrays.sort(speeds);
         double med_speed=speeds[speeds_length/2];
-        double delta=Math.clamp(med_speed-last_speed,-max_acc,max_acc);
+        double delta=Math.min(Math.max(med_speed-last_speed,-max_acc),max_acc);
         last_speed+=delta;
-        return Math.clamp(last_speed/max_speed,0.0,1.0);
+        return Math.min(Math.max(last_speed/max_speed,0.0),1.0);
     }
     public void reloadF(double speed){
         Arrays.fill(speed_samples,Math.min(speed,max_speed));
